# Website-StaticTemplate

./: .gitignore  deploy.sh
crm-core/: Cargo.toml
crm-core/import/: testing.csv
crm-core/src/: main.rs  webservice_types.rs
crm-core/src/webservice/: mod.rs
crm-core/templates/: about.html  contact.html  footer.html  header.html  index.html  photos.html
crm-core/templates/static/: 0-pre.js  1-post.js  styles.css
