[package]
name = "crm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
axum = { version = "0.8.3", features = ["macros"] }
askama = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["fs", "set-header", "cors"] }
lazy_static = "1.5.0"
native-tls = "0.2.14"
axum-extra = { version = "0.10.1", features = ["cookie"] }
